<resources>
    <string name="app_name">Baby Needs</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_item">Add item</string>
    <string name="enter_item">Enter item</string>
    <string name="enter_qty">Enter Qty</string>
    <string name="enter_size">Enter Size</string>
    <string name="enter_color">Enter Color</string>
    <string name="save_button">Save</string>
</resources>